Bug 907754 - Ensure that the zoom on the FrameMetrics is initialized correctly for all frames. r=tn

RecordFrameMetrics gets called on a variety of layers. Previously it would
incorrectly set mZoom for a number of these layers. For scrollable container
layers inside the main document, it would set the mResolution from the
presShell's resolution, thus compounding the painted resolution.
Furthermore, for iframes inside the document, it would assign mZoom the
value from TabChild's mLastMetrics, which is only meant to apply to the
top-level document. Prior to multi-apzc work these values were never used
so it didn't matter but now they are so they should be assigned correctly.